<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="Du">°C</string>
    <string name="Du1">°</string>
    <string name="monday_abbre">MON</string>
    <string name="tuesday_abbre">TUE</string>
    <string name="wednesday_abbre">WED</string>
    <string name="thursday_abbre">THU</string>
    <string name="friday_abbre">FRI</string>
    <string name="saturday_abbre">SAT</string>
    <string name="sunday_abbre">SUN</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday_upper">MONDAY</string>
    <string name="Tuesday_upper">TUESDAY</string>
    <string name="Wednesday_upper">WEDNESDAY</string>
    <string name="Thursday_upper">THURSDAY</string>
    <string name="Friday_upper">FRIDAY</string>
    <string name="Saturday_upper">SATURDAY</string>
    <string name="Sunday_upper">SUNDAY</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="January">Jan</string>
    <string name="February">Feb</string>
    <string name="March">Mar</string>
    <string name="April">Apr</string>
    <string name="May">May</string>
    <string name="June">Jun</string>
    <string name="July">Jul</string>
    <string name="August">Aug</string>
    <string name="September">Sep</string>
    <string name="October">Oct</string>
    <string name="November">Nov</string>
    <string name="December">Dec</string>
    <string name="January_qx">January</string>
    <string name="February_qx">February</string>
    <string name="March_qx">March</string>
    <string name="April_qx">April</string>
    <string name="May_qx">May</string>
    <string name="June_qx">June</string>
    <string name="July_qx">July</string>
    <string name="August_qx">August</string>
    <string name="September_qx">September</string>
    <string name="October_qx">October</string>
    <string name="November_qx">November</string>
    <string name="December_qx">December</string>
    <string name="January_abbre">JAN</string>
    <string name="February_abbre">FEB</string>
    <string name="March_abbre">MAR</string>
    <string name="April_abbre">APR</string>
    <string name="May_abbre">MAY</string>
    <string name="June_abbre">JUN</string>
    <string name="July_abbre">JUL</string>
    <string name="August_abbre">AUG</string>
    <string name="September_abbre">SEP</string>
    <string name="October_abbre">OCT</string>
    <string name="November_abbre">NOV</string>
    <string name="December_abbre">DEC</string>
    <string name="January_abbre_qx">JANUARY</string>
    <string name="February_abbre_qx">FEBRUARY</string>
    <string name="March_abbre_qx">MARCH</string>
    <string name="April_abbre_qx">APRIL</string>
    <string name="May_abbre_qx">MAY</string>
    <string name="June_abbre_qx">JUNE</string>
    <string name="July_abbre_qx">JULY</string>
    <string name="August_abbre_qx">AUGUST</string>
    <string name="September_abbre_qx">SEPTEMBER</string>
    <string name="October_abbre_qx">OCTOBER</string>
    <string name="November_abbre_qx">NOVEMBER</string>
    <string name="December_abbre_qx">DECEMBER</string>
    <string name="Monday_XQ">MONDAY</string>
    <string name="Tuesday_XQ">TUESDAY</string>
    <string name="Wednesday_XQ">WEDNESDAY</string>
    <string name="Thursday_XQ">THURSDAY</string>
    <string name="Friday_XQ">FRIDAY</string>
    <string name="Saturday_XQ">SATURDAY</string>
    <string name="Sunday_XQ">SUNDAY</string>
    <string name="ri"></string>
    <string name="yue">-</string>
    <string name="percent">%</string>
    <string name="th">th</string>
    <string name="degree_centigrade">°C</string>
    <string name="app_name">Watch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="options">Options</string>
    <string name="close">Dismiss</string>
    <string name="open">Open</string>
    <string name="notification_no_items">No notification</string>
    <string name="clockface_jk01">kw98_jk01</string>
    <string name="clockface_jk02">kw98_jk02</string>
    <string name="clockface_jk03">kw98_jk03</string>
    <string name="clockface01">kw98_01</string>
    <string name="clockface02">kw98_02</string>
    <string name="clockface03">kw98_03</string>
    <string name="clockface04">kw98_04</string>
    <string name="clockface05">kw98_05</string>
    <string name="clockface77">tcWatch_02</string>
    <string name="clockface_model_01">Ld_01</string>
    <string name="send_info_text1">ScreenOn、Vibrator</string>
    <string name="send_info_text2">Slience</string>
    <string name="screenon_guesture">Raise Hand</string>
    <string name="airplane_mode">AirPhone Mode</string>
    <string name="connected_device">Device Connect</string>
    <string name="low">Low</string>
    <string name="middle">Mid</string>
    <string name="hight">Hig</string>
    <string name="brightness_setting">Brightness Level</string>
    <string name="today_counts">Today Steps</string>
    <string name="mainappimage">main app image</string>
    <string name="speech_recognize">Speech recognize</string>
    <string name="nearly_restaurant">nearly restaurant</string>
    <string name="todays_weather">"today's weather"</string>
    <string name="todays_schedule">"today's schedule"</string>
    <string name="tonight_remind_me">tonight remind me</string>
    <string name="newly_movies">newly movies</string>
    <string name="heat_news">heat news</string>
    <string name="nearby_atm">nearby ATM</string>
    <string name="nearby_hotel">nearby hotel</string>
    <string name="who_is_zbc">who is zbc</string>
    <string name="goto_airport">go to airport</string>
    <string name="talk_a_joke">talk a joke</string>
    <string name="nearby_beuty_girls">nearby beauty girls</string>
    <string name="check_tomorro_to_SHAI_tickets">check to Shanghai tickets</string>
    <string name="check_tomorro_to_fuzhous_flight">check to Fuzhou flights</string>
    <string name="set_a_10mins_countdown">set a 10mins countdown</string>
    <string name="open_stopwatch">open stopwatch</string>
    <string name="imageview_contentdescrip">this is a imageview</string>
    <string name="tip_retry">"please check watch's network"</string>
    <string name="tip_searching">"searching.."</string>
    <string name="tip_slow_net">"the network is slow, please wait.."</string>
    <string name="local_date_format">MM-dd</string>
    <string name="store_name">Store name: </string>
    <string name="store_address">Store address: </string>
    <string name="store_distance">Store distance: 32m</string>
    <string name="store_price">Store price</string>
    <string name="navigation">Navigation</string>
    <string name="phonecall">Phone call</string>
    <string name="use_phone_lookup">Use phone lookup</string>
    <string name="Packageerror">Wrong, cannot find the packages!</string>
    <string name="PackageIerror">Internal error</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="voice_controll">"Listenering..."</string>
    <string name="voice_controll_begin">"Listenering..."</string>
    <string name="voice_controll_end">"Identifying..."</string>
    <string name="voice_say_you_want_please">"What do you want ?"</string>
    <string name="bt_disconnect">BT not connected</string>
    <string name="speech_error_network_timeout">Network timeout</string>
    <string name="speech_error_network">Network error</string>
    <string name="speech_error_audio">Audio error</string>
    <string name="speech_error_server">Server error</string>
    <string name="speech_error_client">Client error</string>
    <string name="speech_error_speech_timeout">Speech timeout</string>
    <string name="speech_error_no_match">Speech no match</string>
    <string name="speech_error_insufficient_permissions">Insufficient permissions</string>
    <string name="speech_error_recognize_busy">Speech recognize busy</string>
    <string name="speech_error_no_input_data">No data input</string>
    <string name="jawear_warning">"Opps, I don't know ..."</string>
    <string name="bg_cinema">movies</string>
    <string name="bg_restaurant">restaurant</string>
    <string name="bg_hotel">hotel</string>
    <string name="bg_music">music</string>
    <string name="bg_flight">flight</string>
    <string name="bg_news_default">news</string>
    <string name="bg_news_toutiao">news top</string>
    <string name="clod">Clod</string>
    <string name="heavyclod">Heavyclod</string>
    <string name="sunny">Sunny</string>
    <string name="lightrain">Lightrain</string>
    <string name="heavyrain1">Heavyrain1</string>
    <string name="heavyrain0">Heavyrain0</string>
    <string name="overcast">Overcast</string>
    <string name="snow">Snow</string>
    <string name="lightning">Lightning</string>
    <string name="shower">Shower</string>
    <string name="airplane_mode_on">AirPhone mode ON</string>
    <string name="airplane_mode_off">AirPhone mode OFF</string>
    <string name="screenon_guesture_on">Hand bright screen ON</string>
    <string name="screenon_guesture_off">Hand bright screen OFF</string>
    <string name="find_my_device_success">Found my device!</string>
    <string name="find_my_device_fail">"BT isn't connected ..."</string>
    <string name="music_disconnect">Disconnect</string>
    <string name="music_disconnect_hint">Sync failed, please reconnect from the remote device.</string>
    <string name="music_nonsupport">Remote device don\'t support show song name.</string>
    <string name="no_music">No Music</string>
    <string name="mobiledata_name">moible data</string>
    <string name="mobiledata_remind">Please insert the SIM card</string>
    <string name="phone_connected">Connected</string>
    <string name="phone_disconnected">Disconnected</string>
    <string name="phone_disconnected_toast">PhoneSet disconnected</string>
    <string name="degree">℃</string>
    <string name="type_phone">Phone</string>
    <string name="type_watch">Watch</string>
    <string name="steps_string">1000</string>
    <string name="Weather_sunny">Sunny</string>
    <string name="Weather_partlysunny">P_Sunny</string>
    <string name="Weather_mostlycloudy">M_Cloudy</string>
    <string name="Weather_fog">Fog</string>
    <string name="Weather_shower">Shower</string>
    <string name="Weather_partlysunnywithshowers">Sunny/Show</string>
    <string name="Weather_thunderstorms">Thunder</string>
    <string name="Weather_rain">Rain</string>
    <string name="Weather_flurries">Flurries</string>
    <string name="Weather_partlysunnywithflurries">Sunny/Flu</string>
    <string name="Weather_snow">Snow</string>
    <string name="Weather_ice">Hail</string>
    <string name="Weather_rainandsnowmixed">Rain/Shower</string>
    <string name="Weather_hot">Hot</string>
    <string name="Weather_cold">Cold</string>
    <string name="Weather_windy">Windy</string>
    <string name="Weather_clear">Clear</string>
    <string name="Weather_mostlyclear">M_Clear</string>
    <string name="font_download_done">Dial complete installation</string>
    <string name="font_error">Error</string>
</resources>