<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:padding="10dip"
    android:background="@android:color/black"
    >
       
    <LinearLayout
        android:id="@+id/notify_send_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dip"
        android:paddingTop="20dip" >

        <LinearLayout
            android:id="@+id/notify_send_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/notify_send_style_background"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/notify_send_style_1"
                android:layout_width="@dimen/switch_icon_size"
                android:layout_height="@dimen/switch_icon_size"
                android:clickable="true"
                android:contentDescription="@string/send_info_text1"
                android:src="@drawable/smart_watch_notify_send_style1_selected" />

            <Space
                android:layout_width="30dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/notify_send_style_2"
                android:layout_width="@dimen/switch_icon_size"
                android:layout_height="@dimen/switch_icon_size"
                android:clickable="true"
                android:contentDescription="@string/send_info_text2"
                android:src="@drawable/smart_watch_notify_send_style2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/notify_send_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/send_info_text1"
                android:textColor="@android:color/darker_gray"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/system_func_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notify_send_status"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dip" >

        <ImageView
            android:id="@+id/system_screenon_guesture"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/screenon_guesture"
            android:src="@drawable/smart_watch_screenon_guesture_on" />

        <ImageView
            android:id="@+id/system_airplane_mode"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/airplane_mode"
            android:src="@drawable/smart_watch_airmode_off" />

        <ImageView
            android:id="@+id/mobile_data_settings"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/mobiledata_name"
            android:src="@drawable/smart_watch_mobile_data_off" />

        <ImageView
            android:id="@+id/system_connected_device"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/connected_device"
            android:src="@drawable/gps_off" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/brightness_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/system_func_settings"
        android:orientation="horizontal"
        android:paddingEnd="30dip"
        android:paddingStart="30dip"
        android:paddingTop="30dip" >

        <ImageView
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:contentDescription="@string/brightness_setting"
            android:paddingEnd="5dip"
            android:paddingStart="0dip"
            android:paddingTop="5dip"
            android:src="@drawable/smart_watch_brightness_display" />

        <LinearLayout
            android:id="@+id/brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/brightness_setting_background"
            android:orientation="horizontal" 
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/brightness_low"
                android:layout_width="0dip"
                android:layout_height="@dimen/light_height"
                android:layout_weight="1"
                android:clickable="true" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/low"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/brightness_mid"
                android:layout_width="0dip"
                android:layout_height="@dimen/light_height"
                android:layout_weight="1"
                android:clickable="true" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/middle"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/brightness_hig"
                android:layout_width="0dip"
                android:layout_height="@dimen/light_height"
                android:layout_weight="1"
                android:clickable="true" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hight"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="@dimen/switch_icon_size"
        android:layout_height="@dimen/switch_icon_size"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="236dp">

        <Button
            android:id="@+id/low"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:background="@drawable/selector01"
            android:text="@string/low"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/high"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:background="@drawable/shape01"
            android:text="@string/hight"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/midd"
            android:layout_width="@dimen/switch_icon_size"
            android:layout_height="@dimen/switch_icon_size"
            android:background="@drawable/selector01"
            android:text="@string/middle"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </FrameLayout>
<LinearLayout 
    android:id="@+id/wifi_blue"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/switch_icon_size"
    android:orientation="horizontal"
    android:layout_marginTop="236dp"
    android:layout_marginLeft="150dp">
    
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight = "1"
		        android:orientation="vertical"
		         >
		    	<ImageView  
		               android:id="@+id/bt_stat" 
		               android:layout_width="@dimen/switch_icon_size"  
		               android:layout_height="@dimen/switch_icon_size">  
		        </ImageView> 
		        <TextView 
			            android:id="@+id/bt_stat_txt"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textColor="@android:color/white"
			            android:gravity="center"
			            android:textSize="16sp"/>
		    </LinearLayout>
		    <Space
		        android:layout_width="10dp"
		        android:layout_height="match_parent"/>
		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight = "1"
		        android:orientation="vertical" 
		         >
		    	<ImageView  
		               android:id="@+id/wifi_status"  
		               android:layout_width="@dimen/switch_icon_size"  
		               android:layout_height="@dimen/switch_icon_size">  
		        </ImageView> 
		        <TextView 
			            android:id="@+id/wifi_name"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textColor="@android:color/white"
			            android:gravity="center"
			            android:textSize="16sp"/>
		    </LinearLayout>
</LinearLayout>
</RelativeLayout>